# AI-Research-Agent

./: .env  MANIFEST.in  README.md  agent.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  python-publish.yml
agents/: search.py  summarize.py  translate.py  writer.py
helpers/: api.py  env.py  log.py  output_settings.py
mobile/: agent.py
