[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-agent"
version = "1.1.0"
description = "Automate & accelerate AI research with Python! Focus on experiments, not setup, with smart topic planning, multi-source retrieval, and automated report generation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Mahdi Haqiqat", email = "mahdihaqiqat55@gmail.com" }
]

maintainers = [
    { name = "Mahdi Haqiqat", email = "mahdihaqiqat@outlook.com" }
]

dependencies = [
    "ollama",
    "python-dotenv",
    "ddgs",
    "httpx",
    "questionary",
    "python-docx",
    "reportlab",
    "arabic-reshaper",
    "python-bidi",
	"argparse",
	"pathlib"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "https://pypi.org/project/ai-research-agent/"
Repository = "https://github.com/Mahdi-Haqiqat/AI-Research-Agent"

[project.scripts]
ai-research = "ai_research_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_research_agent*"]

[tool.setuptools.package-data]
ai_research_agent = ["DejaVuSans.ttf", ".env"]

[tool.setuptools.data-files]
"" = ["LICENSE"]
